refactor(#3): overhauled storage repository layer to enable service-layer controlled JDBC transactions (Connection injection)