@@ -11,8 +11,6 @@ import java.sql.SQLException;
 import java.util.Optional;
 import java.util.stream.Stream;
 
-import javax.sql.DataSource;
-
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -26,49 +24,12 @@ public class UserSqliteRepositoryTest {
     private static final String tableName = "test_users";
     private static final User dummyUser = new User("Bob");
 
-    @ParameterizedTest(name = "{index} - {0}")
-    @MethodSource("createTestcases")
-    void testCreate(CreateTestcase testcase){
-        DataSource dataSource = mock(DataSource.class);
-        UserFactory userFactory = mock(UserFactory.class);
-        UserSqliteRepository repository = new UserSqliteRepository(dataSource, tableName, userFactory);
-
-        Connection connection = mock(Connection.class);
-        PreparedStatement preparedStatement = mock(PreparedStatement.class);
-
-        try{
-            if(testcase.user != null){
-                when(dataSource.getConnection()).thenReturn(connection);
-                when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
-
-                if (testcase.shouldThrowSQLException()) {
-                    when(preparedStatement.executeUpdate()).thenThrow(new SQLException("Insert failed"));
-                } else {
-                    when(preparedStatement.executeUpdate()).thenReturn(testcase.rowsAffected);
-                }
-            }
-
-            boolean result = repository.create(testcase.user());
-
-            assertEquals(testcase.expectedResult, result,
-                        "Result value mismatch for: " + testcase.description);
-
-            if (testcase.user != null && !testcase.shouldThrowSQLException()) {
-                verify(dataSource).getConnection();
-                verify(connection).prepareStatement(anyString());
-                verify(preparedStatement).executeUpdate();
-            }
-
-        } catch (SQLException e) {
-            fail("SQLException should not occur with mocks: " + e.getMessage());
-        }
-    }
 
     private record CreateTestcase(
         User user,
         boolean shouldThrowSQLException,
         int rowsAffected,
-        boolean expectedResult,
+        Class<? extends Exception> expectedException,
         String description
     ){
         @Override
@@ -79,64 +40,48 @@ public class UserSqliteRepositoryTest {
 
     private static Stream<CreateTestcase> createTestcases(){
         return Stream.of(
-            new CreateTestcase(dummyUser, false, 1, true, "Valid User - successful insert"),
-            new CreateTestcase(dummyUser, false, 0, false, "Valid User - unsuccessful insert"),
-            new CreateTestcase(null, false, 1, false, "Null User"),
-            new CreateTestcase(dummyUser, true, 1, false, "SQLException during create attempt")
+            new CreateTestcase(dummyUser, false, 1, null, "Valid User - successful insert"),
+            new CreateTestcase(dummyUser, false, 0, SQLException.class, "Valid User - unsuccessful insert"),
+            new CreateTestcase(null, false, 1, IllegalArgumentException.class, "Null User"),
+            new CreateTestcase(dummyUser, true, 1, SQLException.class, "SQLException during create attempt")
         );
     }
 
     @ParameterizedTest(name = "{index} - {0}")
-    @MethodSource("readTestcases")
-    void testRead(ReadTestcase testcase){
-        DataSource dataSource = mock(DataSource.class);
+    @MethodSource("createTestcases")
+    void testCreate(CreateTestcase testcase){
         UserFactory userFactory = mock(UserFactory.class);
-        UserSqliteRepository repository = new UserSqliteRepository(dataSource, tableName, userFactory);
+        UserSqliteRepository repository = new UserSqliteRepository(tableName, userFactory);
 
         Connection connection = mock(Connection.class);
         PreparedStatement preparedStatement = mock(PreparedStatement.class);
-        ResultSet resultSet = mock(ResultSet.class);
-
-        try {
-            if(testcase.id != null && !testcase.id.isBlank()){
-                when(dataSource.getConnection()).thenReturn(connection);
+        try{
+            if (testcase.user != null) {
                 when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
 
-                if(testcase.shouldThrowSQLException){
-                    when(preparedStatement.executeQuery()).thenThrow(new SQLException("DB error"));
+                if (testcase.shouldThrowSQLException()) {
+                    when(preparedStatement.executeUpdate()).thenThrow(new SQLException("Insert failed"));
                 } else {
-                    when(preparedStatement.executeQuery()).thenReturn(resultSet);
-                    when(resultSet.next()).thenReturn(testcase.hitInDB);
-
-                    if(testcase.hitInDB){
-                        if(testcase.factoryThrowsSQLException){
-                            when(userFactory.fromDataBaseEntry(resultSet))
-                                .thenThrow(new SQLException("Factory error"));
-                        }
-                        else if(testcase.expectedUser.isPresent()){
-                            when(userFactory.fromDataBaseEntry(resultSet))
-                                .thenReturn(testcase.expectedUser.get());
-                        }
-                    }
+                    when(preparedStatement.executeUpdate()).thenReturn(testcase.rowsAffected);
                 }
             }
 
-            Optional<User> result = repository.read(testcase.id);
-
-            assertEquals(testcase.expectedUser, result,                         
-                        "Result value mismatch for: " + testcase.description);
-            if (testcase.id != null && !testcase.id.isBlank() && !testcase.shouldThrowSQLException && testcase.hitInDB) {
-                verify(dataSource).getConnection();
+            if (testcase.expectedException != null) {
+                assertThrows(testcase.expectedException, () ->
+                    repository.create(connection, testcase.user),
+                    "Expected exception was not thrown for: " + testcase.description
+                );
+            } else {
+                assertDoesNotThrow(() ->
+                    repository.create(connection, testcase.user),
+                    "Unexpected exception thrown for: " + testcase.description
+                );
+            
                 verify(connection).prepareStatement(anyString());
-                verify(preparedStatement).setString(1, testcase.id);
-                verify(preparedStatement).executeQuery();
-                verify(resultSet).next();
-                if (!testcase.factoryThrowsSQLException) {
-                    verify(userFactory).fromDataBaseEntry(resultSet);
-                }
+                verify(preparedStatement).executeUpdate();
             }
         } catch (SQLException e) {
-           fail("SQLException should not occur with mocks: " + e.getMessage());
+            fail("SQLException should not occur with mocks: " + e.getMessage());
         }
     }
 
@@ -166,36 +111,58 @@ public class UserSqliteRepositoryTest {
     }
 
     @ParameterizedTest(name = "{index} - {0}")
-    @MethodSource("updateTestcases")
-    void testUpdate(UpdateTestcase testcase){
-        DataSource dataSource = mock(DataSource.class);
+    @MethodSource("readTestcases")
+    void testRead(ReadTestcase testcase) throws SQLException {
         UserFactory userFactory = mock(UserFactory.class);
-        UserSqliteRepository repository = new UserSqliteRepository(dataSource, tableName, userFactory);
+        UserSqliteRepository repository = new UserSqliteRepository(tableName, userFactory);
 
         Connection connection = mock(Connection.class);
         PreparedStatement preparedStatement = mock(PreparedStatement.class);
-
-        try {
-            if(testcase.user != null){
-                when(dataSource.getConnection()).thenReturn(connection);
+        ResultSet resultSet = mock(ResultSet.class);
+        try{
+            if (testcase.id != null && !testcase.id.isBlank()) {
                 when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
 
-                if (testcase.shouldThrowSQLException()) {
-                    when(preparedStatement.executeUpdate()).thenThrow(new SQLException("Update failed"));
+                if (testcase.shouldThrowSQLException) {
+                    when(preparedStatement.executeQuery()).thenThrow(new SQLException("DB error"));
                 } else {
-                    when(preparedStatement.executeUpdate()).thenReturn(testcase.rowsAffected);
+                    when(preparedStatement.executeQuery()).thenReturn(resultSet);
+                    when(resultSet.next()).thenReturn(testcase.hitInDB);
+
+                    if (testcase.hitInDB) {
+                        if (testcase.factoryThrowsSQLException) {
+                            when(userFactory.fromDataBaseEntry(resultSet))
+                                .thenThrow(new SQLException("Factory error"));
+                        } else if (testcase.expectedUser.isPresent()) {
+                            when(userFactory.fromDataBaseEntry(resultSet))
+                                .thenReturn(testcase.expectedUser.get());
+                        }
+                    }
                 }
             }
 
-            boolean result = repository.update(testcase.user);
+            if (testcase.shouldThrowSQLException) {
+                assertThrows(SQLException.class,
+                    () -> repository.read(connection, testcase.id),
+                    "Expected SQLException was not thrown for: " + testcase.description
+                );
+            } else {
+                Optional<User> result = repository.read(connection, testcase.id);
+                assertEquals(testcase.expectedUser, result,
+                    "Result value mismatch for: " + testcase.description);
 
-            assertEquals(testcase.expectedResult, result,
-                        "Result value mismatch for: " + testcase.description);
+                if (testcase.id != null && !testcase.id.isBlank()) {
+                    verify(connection).prepareStatement(anyString());
+                    verify(preparedStatement).setString(1, testcase.id);
+                    verify(preparedStatement).executeQuery();
 
-            if (testcase.user != null && !testcase.shouldThrowSQLException()) {
-                verify(dataSource).getConnection();
-                verify(connection).prepareStatement(anyString());
-                verify(preparedStatement).executeUpdate();
+                    if (testcase.hitInDB) {
+                        verify(resultSet).next();
+                        if (!testcase.factoryThrowsSQLException) {
+                            verify(userFactory).fromDataBaseEntry(resultSet);
+                        }
+                    }
+                }
             }
         } catch (SQLException e) {
             fail("SQLException should not occur with mocks: " + e.getMessage());
@@ -206,7 +173,7 @@ public class UserSqliteRepositoryTest {
         User user,
         boolean shouldThrowSQLException,
         int rowsAffected,
-        boolean expectedResult,
+        Class<? extends Exception> expectedException,
         String description
     ){
         @Override
@@ -217,46 +184,47 @@ public class UserSqliteRepositoryTest {
 
     private static Stream<UpdateTestcase> updateTestcases(){
         return Stream.of(
-            new UpdateTestcase(dummyUser, false, 1, true, "Valid user - successful update"),
-            new UpdateTestcase(dummyUser, false, 0, false, "Valid user - unsuccessful update"),
-            new UpdateTestcase(dummyUser, true, 0, false, "SQLException during update attempt"),
-            new UpdateTestcase(null, false, 0, false, "Null user")
+            new UpdateTestcase(dummyUser, false, 1, null, "Valid user - successful update"),
+            new UpdateTestcase(dummyUser, false, 0, SQLException.class, "Valid user - unsuccessful update"),
+            new UpdateTestcase(dummyUser, true, 0, SQLException.class, "SQLException during update attempt"),
+            new UpdateTestcase(null, false, 0, IllegalArgumentException.class, "Null user")
         );
     }
 
     @ParameterizedTest(name = "{index} - {0}")
-    @MethodSource("deleteTestcases")
-    void testDelete(DeleteTestcase testcase){
-        DataSource dataSource = mock(DataSource.class);
+    @MethodSource("updateTestcases")
+    void testUpdate(UpdateTestcase testcase){
         UserFactory userFactory = mock(UserFactory.class);
-        UserSqliteRepository repository = new UserSqliteRepository(dataSource, tableName, userFactory);
+        UserSqliteRepository repository = new UserSqliteRepository(tableName, userFactory);
 
         Connection connection = mock(Connection.class);
         PreparedStatement preparedStatement = mock(PreparedStatement.class);
 
         try {
-            if(testcase.id != null && !testcase.id.isBlank()){
-                when(dataSource.getConnection()).thenReturn(connection);
+            if(testcase.user != null){
                 when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
 
                 if (testcase.shouldThrowSQLException()) {
-                    when(preparedStatement.executeUpdate()).thenThrow(new SQLException("Delete failed"));
+                    when(preparedStatement.executeUpdate()).thenThrow(new SQLException("Update failed"));
                 } else {
                     when(preparedStatement.executeUpdate()).thenReturn(testcase.rowsAffected);
                 }
             }
 
-            boolean result = repository.delete(testcase.id);
-
-            assertEquals(testcase.expectedResult, result,
-                        "Result value mismatch for: " + testcase.description);
-
-            if (testcase.id != null && !testcase.id.isBlank() && !testcase.shouldThrowSQLException) {
-                verify(dataSource).getConnection();
+            if (testcase.expectedException != null) {
+                assertThrows(testcase.expectedException, () ->
+                    repository.update(connection, testcase.user),
+                    "Expected exception was not thrown for: " + testcase.description
+                );
+            } else {
+                assertDoesNotThrow(() ->
+                    repository.update(connection, testcase.user),
+                    "Unexpected exception thrown for: " + testcase.description
+                );
+            
                 verify(connection).prepareStatement(anyString());
                 verify(preparedStatement).executeUpdate();
             }
-            
         } catch (SQLException e) {
             fail("SQLException should not occur with mocks: " + e.getMessage());
         }
@@ -266,7 +234,7 @@ public class UserSqliteRepositoryTest {
         String id,
         boolean shouldThrowSQLException,
         int rowsAffected,
-        boolean expectedResult,
+        Class<? extends Exception> expectedException,
         String description
     ){
         @Override
@@ -277,52 +245,50 @@ public class UserSqliteRepositoryTest {
 
     private static Stream<DeleteTestcase> deleteTestcases(){
         return Stream.of(
-            new DeleteTestcase(null, false, 0, false, "Null Id"),
-            new DeleteTestcase("", false, 0, false, "Empty Id"),
-            new DeleteTestcase("validId", false, 1, true, "Valid Id - successful delete"),
-            new DeleteTestcase("validId", false, 0, false, "Valid Id - unsuccessful delete"),
-            new DeleteTestcase("validId", true, 0, false, "SQLException during delete attempt")
+            new DeleteTestcase(null, false, 0, IllegalArgumentException.class, "Null Id"),
+            new DeleteTestcase("", false, 0, IllegalArgumentException.class, "Empty Id"),
+            new DeleteTestcase("validId", false, 1, null, "Valid Id - successful delete"),
+            new DeleteTestcase("validId", false, 0, SQLException.class, "Valid Id - unsuccessful delete"),
+            new DeleteTestcase("validId", true, 0, SQLException.class, "SQLException during delete attempt")
         );
     }
 
     @ParameterizedTest(name = "{index} - {0}")
-    @MethodSource("existsTestcases")
-    void testExists(ExistsTestcase testcase) {
-        DataSource dataSource = mock(DataSource.class);
+    @MethodSource("deleteTestcases")
+    void testDelete(DeleteTestcase testcase){
         UserFactory userFactory = mock(UserFactory.class);
-        UserSqliteRepository repository = new UserSqliteRepository(dataSource, tableName, userFactory);
+        UserSqliteRepository repository = new UserSqliteRepository(tableName, userFactory);
 
         Connection connection = mock(Connection.class);
         PreparedStatement preparedStatement = mock(PreparedStatement.class);
-        ResultSet resultSet = mock(ResultSet.class);
 
         try {
-            if (testcase.userId() != null && !testcase.userId().trim().isEmpty()) {
-                when(dataSource.getConnection()).thenReturn(connection);
+            if(testcase.id != null && !testcase.id.isBlank()){
                 when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+
                 if (testcase.shouldThrowSQLException()) {
-                    when(preparedStatement.executeQuery())
-                            .thenThrow(new SQLException("Database connection failed"));
+                    when(preparedStatement.executeUpdate()).thenThrow(new SQLException("Delete failed"));
                 } else {
-                    when(preparedStatement.executeQuery()).thenReturn(resultSet);
-                    when(resultSet.next()).thenReturn(testcase.resultSetHasNext());
+                    when(preparedStatement.executeUpdate()).thenReturn(testcase.rowsAffected);
                 }
             }
 
-            Optional<Boolean> result = repository.exists(testcase.userId());
+            if(testcase.expectedException != null){
+                assertThrows(testcase.expectedException, () ->
+                    repository.delete(connection, testcase.id),
+                    "Expected exception was not thrown for: " + testcase.description
+                );
+            } else {
+                assertDoesNotThrow(() ->
+                    repository.delete(connection, testcase.id),
+                    "Unexpected exception thrown for: " + testcase.description
+                );
 
-            assertEquals(testcase.expectedResult(), result,
-                    "Optional / Wert mismatch für: " + testcase.description);
-
-            if (testcase.userId() != null && !testcase.userId().trim().isEmpty()
-                    && !testcase.shouldThrowSQLException()) {
-                verify(dataSource).getConnection();
                 verify(connection).prepareStatement(anyString());
-                verify(preparedStatement).setString(1, testcase.userId());
-                verify(preparedStatement).executeQuery();
-                verify(resultSet).next();
+                verify(preparedStatement).executeUpdate();
             }
 
+            
         } catch (SQLException e) {
             fail("SQLException should not occur with mocks: " + e.getMessage());
         }
@@ -331,7 +297,8 @@ public class UserSqliteRepositoryTest {
     private record ExistsTestcase(
         String userId, 
         boolean resultSetHasNext, 
-        Optional<Boolean> expectedResult,
+        boolean expectedResult,
+        Class<? extends Exception> expectedException,
         boolean shouldThrowSQLException,
         String description) {
 
@@ -343,32 +310,59 @@ public class UserSqliteRepositoryTest {
 
     private static Stream<ExistsTestcase> existsTestcases() {
         return Stream.of(
-            new ExistsTestcase("valid-id", true, Optional.of(true), false, "User exists"),
-            new ExistsTestcase("non-existing-id", false, Optional.of(false), false, "User does not exist"),
-            new ExistsTestcase(null, false, Optional.of(false), false, "Null ID"),
-            new ExistsTestcase("", false, Optional.of(false), false, "Empty ID"),
-            new ExistsTestcase("  ", false, Optional.of(false), false, "Whitespace-only ID"),
-            new ExistsTestcase("db-error-id", false, Optional.empty(), true, "Database error")
+            new ExistsTestcase("valid-id", true, true,null, false, "User exists"),
+            new ExistsTestcase("non-existing-id", false, false,null, false, "User does not exist"),
+            new ExistsTestcase(null, false, false,IllegalArgumentException.class, false, "Null ID"),
+            new ExistsTestcase("", false, false,IllegalArgumentException.class, false, "Empty ID"),
+            new ExistsTestcase("  ", false, false,IllegalArgumentException.class, false, "Whitespace-only ID"),
+            new ExistsTestcase("db-error-id", false, false,SQLException.class, true, "Database error")
         );
     }
 
     @ParameterizedTest(name = "{index} - {0}")
-    @MethodSource("validateUserTestcases")
-    void testValidateUser(ValidationTestcase testcase) {
-        DataSource dataSource = mock(DataSource.class);
+    @MethodSource("existsTestcases")
+    void testExists(ExistsTestcase testcase) {
         UserFactory userFactory = mock(UserFactory.class);
-        UserSqliteRepository repository = new UserSqliteRepository(dataSource, tableName, userFactory);
+        UserSqliteRepository repository = new UserSqliteRepository(tableName, userFactory);
 
-        User user = null;
-        if (!testcase.isNullUser()) {
-            user = mock(User.class);
-            lenient().when(user.getId()).thenReturn(testcase.userId());
+        Connection connection = mock(Connection.class);
+        PreparedStatement preparedStatement = mock(PreparedStatement.class);
+        ResultSet resultSet = mock(ResultSet.class);
+
+        try {
+            if (testcase.userId() != null && !testcase.userId().trim().isEmpty()) {
+                when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+                if (testcase.shouldThrowSQLException()) {
+                    when(preparedStatement.executeQuery())
+                            .thenThrow(new SQLException("Database connection failed"));
+                } else {
+                    when(preparedStatement.executeQuery()).thenReturn(resultSet);
+                    when(resultSet.next()).thenReturn(testcase.resultSetHasNext());
+                }
+            }
+
+            if(testcase.expectedException != null){
+                assertThrows(testcase.expectedException, () ->
+                    repository.exists(connection, testcase.userId),
+                    "Expected exception was not thrown for: " + testcase.description
+                );
+            } else {
+                boolean result = repository.exists(connection, testcase.userId);
+
+                assertEquals(testcase.expectedResult, result, 
+                    "Result value mismatch for: " + testcase.description
+                );
+
+                if (testcase.userId != null && !testcase.userId.isBlank()) {
+                    verify(connection).prepareStatement(anyString());
+                    verify(preparedStatement).setString(1, testcase.userId());
+                    verify(preparedStatement).executeQuery();
+                    verify(resultSet).next();
+                }
+            }   
+        } catch (SQLException e) {
+            fail("SQLException should not occur with mocks: " + e.getMessage());
         }
-
-        boolean result = repository.validateUser(user);
-
-        assertEquals(testcase.expectedResult(), result,
-                "Validation result mismatch for: " + testcase.description);
     }
 
     private record ValidationTestcase(
@@ -391,5 +385,23 @@ public class UserSqliteRepositoryTest {
             new ValidationTestcase(false, "", false, "User with empty ID"),
             new ValidationTestcase(false, "   ", false, "User with whitespace-only ID")
         );
+    }
+
+    @ParameterizedTest(name = "{index} - {0}")
+    @MethodSource("validateUserTestcases")
+    void testValidateUser(ValidationTestcase testcase) {
+        UserFactory userFactory = mock(UserFactory.class);
+        UserSqliteRepository repository = new UserSqliteRepository(tableName, userFactory);
+
+        User user = null;
+        if (!testcase.isNullUser) {
+            user = mock(User.class);
+            lenient().when(user.getId()).thenReturn(testcase.userId());
+        }
+
+        boolean result = repository.validateUser(user);
+
+        assertEquals(testcase.expectedResult(), result,
+                "Validation result mismatch for: " + testcase.description);
     }
 }
